[package]
name = "rust_file_master"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE.txt"
authors=["Fayel MOHAMED <mohamed.fayel@yahoo.com>"]
readme="README.md"
description="RustFileMaster is a Rust library designed to simplify and optimize file and filesystem manipulation."
keywords=["file","compression","encryption"]

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
anyhow = "1.0.97"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
flate2 = "1.1.1"
reqwest = "0.12.15"
ring = "0.17.14"
tar = "0.4.44"
tokio = {version="1.44.2",features=["full"]}
zip = "2.6.1"
